--- a/BCandSC_CSharp/wwwroot/css/main.css
+++ b/BCandSC_CSharp/wwwroot/css/main.css
@@ -17,6 +17,8 @@ label{
     display: flex;
     gap: 10px;
     top: 450px;
+    width: 600px;
+    overflow-x: scroll;
 }
 
 .field-player-button {
