--- a/BCandSC_CSharp/Pages/Formation.cshtml
+++ b/BCandSC_CSharp/Pages/Formation.cshtml
@@ -1,18 +1,115 @@
 ﻿@page
 @model BCandSC_CSharp.Pages.FormationModel
 @{
-    ViewData["Title"] = "Formation";
-}
 
-<form method="post">
-    <div class="field">
-        <div class="field-formations">
-            <div class="field-formation"><a asp-route-formation="f352" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-5-2</a></div>
-            <div class="field-formation"><a asp-route-formation="f343" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-4-3</a></div>
-            <div class="field-formation"><a asp-route-formation="f451" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-5-1</a></div>
-            <div class="field-formation"><a asp-route-formation="f433" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-3-3</a></div>
-            <div class="field-formation"><a asp-route-formation="f442" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-4-2</a></div>
-            <div class="field-formation"><a asp-route-formation="f532" asp-route-user="@Model.userId" asp-page="/PlayerSelection">5-3-2</a></div>
+    <head>
+        <!-- Einbindung Bootstrap core und CSS. Damit lassen sich die Styles von Bootstrap nutzten -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/main.css">
+
+    </head>
+    <style>
+
+        .field-formation {
+            border: 1px solid white;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 25px;
+            font-weight: 500;
+            max-width: 100%;
+            text-align: center;
+            background-color: #262626;
+            margin: 5px;
+           
+
+        }
+
+        img, picture, svg {
+            max-width: 95%;
+            display: block;
+            border-radius: 5px;
+        }
+
+        p {
+            margin-top: 75px;
+            margin-bottom: 1rem;
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none;
+            background-color: transparent;
+            -webkit-text-decoration-skip: objects;
+        }
+
+            a:hover {
+                color: #3f8015;
+                text-decoration: auto;
+               
+            }
+
+
+    </style>
+
+    ViewData["Title"] = "Formation";
+
+    <body>
+        <nav class="navbar navbar-dark bg-dark">
+
+            <a class="navbar-brand" href="#">TEAMBET</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Features</a>
+                    <a class="nav-item nav-link" href="#">Pricing</a>
+                    <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                </div>
+            </div>
+        </nav>
+
+
+        <p>Bitte wählen Sie Ihre Wunschformation aus.<br><br> 
+        Achtung! Die Wahl kann im nachhinein nicht mehr geändert werden! 
+        
+        </p>
+
+        <div style="display: flex;">
+            <div>
+                <img src="~/img/352.png" alt="" style="margin:5px">
+                    <div class="field-formation"><a asp-route-formation="f352" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-5-2</a></div>
+            </div>
+            <div>
+                <img src="~/img/343.png" alt="" style="margin:5px">
+                <div class="field-formation"><a asp-route-formation="f343" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-4-3</a></div>
+
+            </div>
+            <div>
+                <img src="~/img/451.png" alt="" style="margin:5px">
+                <div class="field-formation"><a asp-route-formation="f451" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-5-1</a></div>
+            </div>
+     
+            <div>
+                <img src="~/img/352.png" alt="" style="margin:5px">
+                <div class="field-formation"><a asp-route-formation="f433" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-3-3</a></div>
+            </div>
+            <div>
+                <img src="~/img/343.png" alt="" style="margin:5px">
+                <div class="field-formation"><a asp-route-formation="f442" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-4-2</a></div>
+            </div>
+            <div>
+                <img src="~/img/451.png" alt="" style="margin:5px">
+                <div class="field-formation"><a asp-route-formation="f532" asp-route-user="@Model.userId" asp-page="/PlayerSelection">5-3-2</a></div>
+            </div>
         </div>
-    </div>
-</form>
+
+
+
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    </body>
+}
