--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -1,20 +1,279 @@
 ﻿@page
 @model BCandSC_CSharp.Pages.MatchdayModel
 @{
+
+    <head>
+        <!-- Einbindung Bootstrap core und CSS. Damit lassen sich die Styles von Bootstrap nutzten -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/main.css">
+
+    </head>
+
+
+    <style>
+
+    /*    p {
+            margin-top: 40px;
+            margin-bottom: 1rem;
+            padding: 20px;
+        }
+*/
+        .container {
+            background-color: #262626;
+            width: 100%;
+            height: 100%;
+        }
+
+  /*      .form-control {
+            display: block;
+            width: 100%;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: #495057;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ced4da;
+            border-radius: .25rem;
+            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+            transition-duration: 0.15s, 0.15s;
+        }*/
+/*
+        .form-group {
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        .pb-3, .py-3 {
+            padding-bottom: 1rem !important;
+            margin: 20;
+            margin: 20px;
+        }
+*/
+        label {
+            text-align: center;
+            font-weight: 250;
+        }
+
+        .card {
+            position: relative;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 1px solid rgba(0,0,0,.125);
+            border-radius: 10px;
+            background-color: #030303;
+            margin-top: 10px;
+        }
+
+        .card-title {
+            margin-bottom: .75rem;
+            text-align: center;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 20px;
+            font-weight: 350;
+        }
+
+        .card-body {
+            flex: 1 1 auto;
+            padding: 1.25rem;
+            color: white;
+            background: url(img/Multimode.jpg) no-repeat center center/cover;
+            border-radius: 10px;
+            border-color: white;
+            border: 2px solid #fff;
+            height: 185px;
+        }
+
+        .card-body1 {
+            flex: 1 1 auto;
+            padding: 1.25rem;
+            color: white;
+            background: url(img/pitchgoal.jpg) no-repeat center center/cover;
+            border-radius: 10px;
+            border-color: white;
+            border: 2px solid #fff;
+            height: 185px;
+        }
+
+        .carousel-item {
+            position: relative;
+            display: none;
+            float: left;
+            width: 100%;
+            margin-right: -100%;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            transition: transform .6s ease-in-out;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            border-radius: 20px;
+           
+        }
+
+        .carousel-inner {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            border-radius: 20px;
+        }
+
+        img, picture, svg {
+            max-width: 100%;
+            display: block;
+            border-radius: 25px;
+        }
+
+        .btn-primary {
+            border-color: #fff;
+            color: #fff;
+            background-color: #343a40;
+            width: 100%;
+            height: 100%;
+        }
+
+            .btn-primary:hover {
+                color: #3f8015;
+                background-color: #fff;
+                border-color: #000;
+            }
+
+     /*   .modeOneOne {
+            display: block;
+            margin: 0 auto;
+        }
+*/
+        
+    </style>
+
     ViewData["Title"] = "Willkommen zu Spieltag " + Model.Matchday;
+
+    <body>
+        <nav class="navbar navbar-dark bg-dark">
+
+            <a class="navbar-brand" href="#">TEAMBET</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Features</a>
+                    <a class="nav-item nav-link" href="#">Pricing</a>
+                    <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                </div>
+            </div>
+        </nav>
+
+
+        <p>
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+        </p>
+
+
+
+
+
+
+
+        <div class="row">
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body1">
+                        <h5 class="card-title">1 vs 1 Mode</h5>
+                        <form method="post">
+                            <div class="form-group">
+                                <label asp-for="TeamName"></label>
+                                <input asp-for="TeamName" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                   
+
+                </div>
+            </div>
+
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Multiplayer Mode</h5>
+                        <form method="post">
+                            <div class="form-group">
+                                <label asp-for="TeamName"></label>
+                                <input asp-for="TeamName" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                   
+
+                </div>
+            </div>
+        </div>
+
+
+        <p>
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+        </p>
+
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="~/img/Stadion2.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/img/BC2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/img/Bundesliga_white.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div> 
+
+
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
+
 }
-
-<h2>@ViewData["Title"]</h2>
-
-<form method="post">
-    <div class="form-group">
-        <label asp-for="TeamName"></label>
-        <input asp-for="TeamName" class="form-control" />
-    </div>
-    <div class="form-group">
-
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Spieltag starten" class="btn btn-primary" />
-    </div>
-</form>
