--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -2,113 +2,318 @@
 @model BCandSC_CSharp.Pages.PlayerSelectionModel
 @{
     ViewData["Title"] = "Player Selection";
+
+    <head>
+        <!-- Einbindung Bootstrap core und CSS. Damit lassen sich die Styles von Bootstrap nutzten -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/main.css">
+
+    </head>
+
+    <style>
+        div.field-player {
+            text-align: center;
+        }
+
+
+        .field-headline-text {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 30px;
+            color: #a69f37;
+            font-weight: 400;
+        }
+
+        .field-headline-coins {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 30px;
+            font-weight: bold;
+            color: #a69f37;
+        }
+
+        .field-headline {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            margin: 10px;
+            max-width: 500px;
+            margin: auto;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        label {
+            text-align: center;
+            font-weight: bold;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 11px;
+         
+        }
+
+        p {
+            margin-top: 75px;
+            margin-bottom: 1rem;
+        }
+
+        .field {
+            margin-top: 20px;
+            position: relative;
+            height: 390px;
+            width: 500px;
+            background: url(../img/fieldhalfright.jpg) center center no-repeat;
+            background-size: auto;
+            background-size: cover;
+            border: 1px solid white;
+            margin: auto;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+        }
+
+        .player-carousel {
+            justify-self: center;
+            display: flex;
+            gap: 10px;
+            top: 450px;
+            width: 100%;
+            overflow-x: scroll;
+            margin-bottom: 10px;
+        }
+        .card-button {
+  position: relative;
+  z-index: 5;
+            color: #fff;
+            background-color: #343a40;
+  border-radius: 10px;
+  max-width: 400px%;
 }
 
-<form method="post">
-    @{
-        if (Model.team.Count == 11)
-        {
-            <input type="submit" value="Test" asp-route-method="done" class="btn btn-primary" />
+        .player-card {
+            display: grid;
+            border: 1px solid white;
+            grid-template-rows: 6fr 1fr 1fr 1fr;
+            height: 330px;
+            width: 184px;
+           
         }
-    }
-    <div class="field">
-        <div class="field-headline">
-            <label class="field-headline-coins">@Model.Coins</label>&nbsp;
-            <label class="field-headline-text">Coins verfügbar</label>
-        </div>
 
-        <div class="field-players @Model.FormationString">
+        .player-picture > img {
+            width: 60%;
+            justify-self: center;
+            align-self: end;
+            border-radius: 60px;
+        }
 
-            @{
-                string namelist = "";
+        .player-card-value {
+            background-color: black;
+            display: grid;
+            justify-content: center;
+            padding-top: 5px;
+        border-radius: 5px;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-                foreach(Player.PlayerPosition position in Model.FormationList){
-                    string name = "Name";                   
+        .btn-primary {
+            border-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 40px;
+            width: 500px;
+            background-color: #343A40;
+            color: white;
+            border-radius: 10px;
+            text-align: center;
+            margin: auto;
+            margin-bottom: auto;
+            margin-bottom: 20px;
+        }
 
-                    foreach(Player p in Model.team.Where(_p => _p.Position == position)){
-                        if(namelist.Contains(p.Name) == false){
-                            name = p.Name;
-                            namelist += p.Name + ";";
-                            break;
+            .btn-primary:hover {
+            color: black;
+            text-decoration: auto;
+        }
+
+
+        .player-card-stats label {
+            font-size: 8px;
+            font-weight: 400;
+        }
+
+        .player-card-value label {
+            color: #a69f37;
+            font-weight: 400;
+        }
+
+        .player-name label {
+            padding-top: 5px; 
+            font-size: 16px; 
+            font-weight: 400;
+
+        }
+      
+    </style>
+
+    <body>
+
+        <nav class="navbar navbar-dark bg-dark">
+
+            <a class="navbar-brand" href="#">TEAMBET</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Features</a>
+                    <a class="nav-item nav-link" href="#">Pricing</a>
+                    <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                </div>
+            </div>
+        </nav>
+
+
+        <p>
+            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+       
+        </p>
+
+        <form method="post">
+         
+
+            <div class="field-headline">
+                <label class="field-headline-coins">@Model.Coins</label>&nbsp;
+                <label class="field-headline-text">Coins verfügbar</label>
+            </div>
+
+            <div class="player-carousel">
+
+                @{
+                    for (int i = 0; i < Model.CarouselPlayers.Count; i++)
+                    {
+                        <button class="card-button" asp-route-player="@i" asp-route-method="addplayer">
+                            <div class="player-card">
+                                <div class="player-card-main">
+
+
+                                   
+
+                                    <div class="player-name">
+
+                                      
+                                        <label class="last-name">@Model.CarouselPlayers[i].Name</label>
+                                    </div>
+
+                                     <div class="player-position">
+                                        <label class="jersey-number sub-text">7</label>
+                                        <label class="position sub-text">MF</label>
+                                    </div>
+                                   
+
+                                    <div class="player-picture">
+                                        <img src="img/icons8-male-user-100.png" alt="">
+                                    </div>
+
+                                   
+
+                                    <div class="player-card-stats">
+                                        <div class="stat-box">
+                                            <label class="stat-value">146</label>
+                                            <label class="stat-name sub-text">Punkte</label>
+                                        </div>
+                                        <div class="stat-box">
+                                            <label class="stat-value">@Model.CarouselPlayers[i].Einsaetze</label>
+                                            <label class="stat-name sub-text">Einsätze</label>
+                                        </div>
+                                        <div class="stat-box">
+                                            <label class="stat-value">10</label>
+                                            <label class="stat-name sub-text">Fouls</label>
+                                        </div>
+                                        <div class="stat-box">
+                                            <label class="stat-value">0</label>
+                                            <label class="stat-name sub-text">Karten</label>
+                                        </div>
+                                        <div class="stat-box">
+                                            <label class="stat-value">@Model.CarouselPlayers[i].Tore</label>
+                                            <label class="stat-name sub-text">Tore</label>
+                                        </div>
+                                        <div class="stat-box">
+                                            <label class="stat-value">3</label>
+                                            <label class="stat-name sub-text">Assits</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="player-card-value">
+                                        <label class="player-value">Marktwert: @Model.CarouselPlayers[i].Marktwert</label>
+
+                                    </div>
+                                    <div class="player-card-points">
+                                        <label class="player-points">Gesamtpunkt: 2.197</label>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </button>
+                    }
+
+
+                }
+
+            </div>
+
+            <div class="field">
+
+
+                <div class="field-players @Model.FormationString">
+
+                    @{
+                        string namelist = "";
+
+                        foreach (Player.PlayerPosition position in Model.FormationList)
+                        {
+                            string name = "Name";
+
+                            foreach (Player p in Model.team.Where(_p => _p.Position == position))
+                            {
+                                if (namelist.Contains(p.Name) == false)
+                                {
+                                    name = p.Name;
+                                    namelist += p.Name + ";";
+                                    break;
+                                }
+                            }
+
+                            <div class="field-player">
+                                <div class="field-player-picture">
+                                    <button class="field-player-button" asp-route-addtype="@position.ToString()" asp-route-method="showcarousel" asp-route-existingplayer="@name"></button>
+                                </div>
+                                <div class="field-player-name">
+                                    <label>@name</label>
+                                </div>
+                            </div>
                         }
                     }
 
-                    <div class="field-player">
-                        <div class="field-player-picture">
-                            <button class="field-player-button" asp-route-addtype="@position.ToString()" asp-route-method="showcarousel" asp-route-existingplayer="@name"></button>
-                        </div>
-                        <div class="field-player-name">
-                            <label>@name</label>
-                        </div>
-                    </div>
+                </div>
+
+            </div>
+
+             @{
+                if (Model.team.Count == 11)
+                {
+                    <input type="submit" value="Test" asp-route-method="done" class="btn btn-primary" />
                 }
-            }
-
-        </div>
-
-    </div>
-
-    <div class="player-carousel">
-
-        @{
-            for (int i = 0; i < Model.CarouselPlayers.Count; i++)
-            {
-                <button class="card-button" asp-route-player="@i" asp-route-method="addplayer">
-                    <div class="player-card">
-                        <div class="player-card-main">
-                            <div class="player-name">
-                                <label class="first-name">@Model.CarouselPlayers[i].Name</label>
-                                <label class="last-name">@Model.CarouselPlayers[i].Name</label>
-                            </div>
-                            <div class="player-position">
-                                <label class="jersey-number sub-text">7</label>
-                                <label class="position sub-text">MF</label>
-                            </div>
-                            <div class="player-picture">
-                                <img src="img/gnabry.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="player-card-stats">
-                            <div class="stat-box">
-                                <label class="stat-value">146</label>
-                                <label class="stat-name sub-text">Punkte</label>
-                            </div>
-                            <div class="stat-box">
-                                <label class="stat-value">@Model.CarouselPlayers[i].Einsaetze</label>
-                                <label class="stat-name sub-text">Einsätze</label>
-                            </div>
-                            <div class="stat-box">
-                                <label class="stat-value">10</label>
-                                <label class="stat-name sub-text">Fouls</label>
-                            </div>
-                            <div class="stat-box">
-                                <label class="stat-value">0</label>
-                                <label class="stat-name sub-text">Karten</label>
-                            </div>
-                            <div class="stat-box">
-                                <label class="stat-value">@Model.CarouselPlayers[i].Tore</label>
-                                <label class="stat-name sub-text">Tore</label>
-                            </div>
-                            <div class="stat-box">
-                                <label class="stat-value">3</label>
-                                <label class="stat-name sub-text">Assits</label>
-                            </div>
-                        </div>
-                        <div class="player-card-points">
-                            <label class="player-points">2.197</label>
-                            <label class="points sub-text">Punkte</label>
-                        </div>
-                        <div class="player-card-value">
-                            <label class="player-value">@Model.CarouselPlayers[i].Marktwert</label>
-                            <label class="marketvalue sub-text">Marktwert</label>
-                        </div>
-                    </div>
-                </button>
-            }
+            } 
 
 
-        }
+        </form>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    </div>
-    
-</form>
+    </body>
+
+}
