--- a/BCandSC_CSharp/Pages/Shared/_Layout.cshtml
+++ b/BCandSC_CSharp/Pages/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container" style="max-width: 100%;">
+        <main role="main" class="pb-3" style="max-width: 100%;">
             @RenderBody()
         </main>
     </div>
