--- a/BCandSC_CSharp/Pages/Formation.cshtml
+++ b/BCandSC_CSharp/Pages/Formation.cshtml
@@ -75,34 +75,37 @@
         
         </p>
 
-        <div style="display: flex;">
-            <div>
-                <img src="~/img/352.png" alt="" style="margin:5px">
-                    <div class="field-formation"><a asp-route-formation="f352" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-5-2</a></div>
-            </div>
-            <div>
-                <img src="~/img/343.png" alt="" style="margin:5px">
-                <div class="field-formation"><a asp-route-formation="f343" asp-route-user="@Model.userId" asp-page="/PlayerSelection">3-4-3</a></div>
+        <form method="post">
+            <div style="display: flex;">
+                <div>
+                    <img src="~/img/352.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="352" asp-route-userId="@Model.userId">3-5-2</button></div>
+                </div>
+                <div>
+                    <img src="~/img/343.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="352" asp-route-userId="@Model.userId">3-5-2</button></div>
+                </div>
+                <div>
+                    <img src="~/img/451.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="343" asp-route-userId="@Model.userId">3-4-3</button></div>
+                </div>
 
+                <div>
+                    <img src="~/img/352.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="433" asp-route-userId="@Model.userId">4-3-3</button></div>
+                </div>
+                <div>
+                    <img src="~/img/343.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="442" asp-route-userId="@Model.userId">4-4-2</button></div>
+                </div>
+                <div>
+                    <img src="~/img/451.png" alt="" style="margin:5px">
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="532" asp-route-userId="@Model.userId">5-3-2</button></div>
+                </div>
             </div>
-            <div>
-                <img src="~/img/451.png" alt="" style="margin:5px">
-                <div class="field-formation"><a asp-route-formation="f451" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-5-1</a></div>
-            </div>
-     
-            <div>
-                <img src="~/img/352.png" alt="" style="margin:5px">
-                <div class="field-formation"><a asp-route-formation="f433" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-3-3</a></div>
-            </div>
-            <div>
-                <img src="~/img/343.png" alt="" style="margin:5px">
-                <div class="field-formation"><a asp-route-formation="f442" asp-route-user="@Model.userId" asp-page="/PlayerSelection">4-4-2</a></div>
-            </div>
-            <div>
-                <img src="~/img/451.png" alt="" style="margin:5px">
-                <div class="field-formation"><a asp-route-formation="f532" asp-route-user="@Model.userId" asp-page="/PlayerSelection">5-3-2</a></div>
-            </div>
-        </div>
+        </form>
+
+        
 
 
 
