--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -179,6 +179,10 @@
 
         <form method="post">
 
+            <div>
+                <label>Wettbetrag</label>
+                <input asp-for="BetAmount" />
+            </div>
 
             <div class="field-headline">
                 <label class="field-headline-coins">@Model.enviroment.Coins</label>&nbsp;
